@startuml

class Login {
    - id : int
    - username : string
    - password : string
    - role : string
}

class Musician {
    - id : int
    - name : string
    - lastname : string
    - email : string
    - image : string
    - instrument : Instrument
}

class MusicianClass {
    - id : int
    - musician : Musician
    - organization : Organization
    - role : string
}

class Organization {
    - id : int
    - name : string
    - email : string
    - description : string
    - image : string
    - type : OrganizationType
}

class OrganizationType {
    - id : int
    - name : string
    - description : string
}

class Valoration {
    - id : int
    - title : string
    - description : string
    - musician : Musician
}

class Event {
    - id : int
    - organization : Organization
    - name : string
    - description : string
    - date : Date
    - created : Date
    - location : string
    - state : string
}

class Details {
    - id : int
    - minPayment : float
    - requiredInstrument : Instrument
    - event : Event
    - quantity : int
}

class Classification {
    - id : int
    - name : string
}

class Instrument {
    - id : int
    - name : string
    - classification : Classification
}

class ParticipationRequest {
    - id : int
    - state : int
    - musician : Musician
    - details : Details
    - event : Event
    - applicationDate : Date
}

class Invitation {
    - id : int
    - musician : Musician
    - organization : Organization
    - state : string
    - message : string
}

Musician "1" -- "1" Login

Musician "1" -- "0.N" Valoration
Musician "1" -- "1" Instrument
Musician "1" -- "N" MusicianClass
Musician "1" -- "0.N" ParticipationRequest

ParticipationRequest "1" -- "1" Event
ParticipationRequest "N" -- "1" Details

MusicianClass "N" -- "1" Organization

Organization "1" -- "0.N" OrganizationType
Organization "1" -- "0.N" Event
Organization "1" -- "0.N" Invitation

Invitation "0.N" -- "1" Musician

Classification "1" -- "0.N" Instrument

Details "N" -- "1" Event

@enduml